# py-solfege

./: .gitignore  README.md  pyproject.toml
.github/workflows/: PR.yml  Release.yml
_docs_conf/: conf.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/autoapi/: index.doctree
docs/.doctrees/autoapi/solfege/: index.doctree
docs/.doctrees/autoapi/solfege/note/: index.doctree
docs/.doctrees/autoapi/solfege/scale/: index.doctree
docs/_modules/: index.html
docs/_modules/solfege/: note.html  scale.html
docs/_sources/autoapi/: index.rst.txt
docs/_sources/autoapi/solfege/: index.rst.txt
docs/_sources/autoapi/solfege/note/: index.rst.txt
docs/_sources/autoapi/solfege/scale/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/solfege/: index.html
docs/autoapi/solfege/note/: index.html
docs/autoapi/solfege/scale/: index.html
tests/: conftest.py
tests/scales/: test_diatonic.py  test_solfege.py
