[tool.poetry]
name = "solfege"
version = "0.1.0"
description = "Python library for dealing with musical scales and solfege"
authors = ["mshafer1"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-snapshot = "^0.9.0"
pytest-mock = "^3.14.0"
ni-python-styleguide = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
